--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <h4>Profile</h4>
               <div class="card-body">
                 <div class="info-heading">
-                  <h4 class="text-center ">Alejandro Osorio</h4>
+                  <h4 class="text-center ">Profe</h4>
                   <h6 class="text-center">Frontend Dev</h6>
                 </div>
                 <div class="icon-grup">
